# ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  PROGRESS.md  PROMPT.md  README.md  ROADMAP.md  docker-compose.yml  litellm-config.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy-ai-dev.yml  deploy-ai-prod.yml  zz-ping-test.yml
.moai/: manifest.json
.moai/config/sections/: git-strategy.yaml  project.yaml
.moai/specs/SPEC-AI-001/: spec.md
.moai/specs/SPEC-AI-002/: spec.md
.moai/specs/SPEC-AI-003/: spec.md
.moai/specs/SPEC-AI-004/: spec.md
.moai/specs/SPEC-AI-005/: spec.md
.moai/specs/SPEC-AI-006/: spec.md
app/: main.py
app/agents/: graph.py  llm_client.py  proactive.py  prompts.py  react_loop.py  vision.py
app/agents/marketing/: __init__.py  generator.py  geo_rules.py  images.py  postprocess.py  schemas.py
app/agents/marketing/channels/: base.py  (+2 more)
app/api/: chat.py  confirm.py  deps.py  health.py  marketing.py  ocr.py  proactive.py  validators.py  voice.py  voice_ws.py  whoami.py
app/backend/: auth.py  client.py
app/confirm/: executor.py  models.py  store.py
app/core/: audit.py  config.py  logging_config.py  usage.py
app/observability/: tracing.py
app/session/: models.py  store.py
app/tools/: registry.py
app/voice/: aws.py  pipeline.py  ports.py
docs/: ARCHITECTURE.md  DESIGN.md
docs/conventions/: 26-05-28-coding-conventions.md
docs/features/: 26-05-26-A-data-analysis.md  26-05-26-B-ocr-reservation.md  26-05-26-C-voice.md  26-05-26-D-agent.md  26-06-04-ai-best-practice-session.md  26-06-04-ai-langgraph-adoption-evaluation.md  26-06-19-M-marketing-blog.md  README.md
docs/plans/: 2026-06-21-prompt-registry.md
docs/specs/: README.md  SPEC-AI-007.md  SPEC-AI-008.md  SPEC-AI-009.md
tests/: test_ai002_hardening.py  test_ai003_hardening.py  test_ai004_hardening.py  test_api.py  test_audit.py  test_auth.py  test_backend_client.py  test_chat.py  test_config.py  test_confirm.py  test_graph.py  test_llm_client.py  test_marketing_api.py  test_marketing_generator.py  test_marketing_images.py  test_marketing_postprocess.py  test_marketing_prompt_override.py  test_ocr_confirm_api.py  test_proactive.py  test_prompts.py  test_react_loop.py  test_session.py  test_tools.py  test_tracing.py  test_usage.py  test_vision.py  test_voice_api.py  test_voice_aws.py  test_voice_pipeline.py  test_voice_ws.py
