[project]
name = "flori-ai"
version = "0.1.0"
description = "Flori 꽃집 SaaS 프리미엄 AI 서비스 — FastAPI + LangGraph"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "langgraph>=0.2.50",
    "langchain-openai>=0.2",
    "boto3>=1.35",
    "amazon-transcribe>=0.6",
    "pillow>=11.0",
]

[project.optional-dependencies]
# 관측성(선택). 미설치 시 app/observability/tracing.py가 no-op로 폴백한다.
# 운영 트레이싱은 현재 LiteLLM success_callback(프록시단)이 담당하며, 이 extra는
# 앱단 @observe 스팬을 켜고 싶을 때만 설치한다(`uv sync --extra observability`).
observability = ["langfuse>=3.0"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis>=2.26",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 의존성 주입 관용구 — 인자 기본값의 Depends() 호출 허용
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
